# lorenzett

./: CMakeLists.txt  dockersh.sh  juju_generate.sh  juju_reco.sh  lulu_reco.sh
docker/bella/: Dockerfile  setup_envs.sh
geometry/DetectorAPModel/: CMakeLists.txt
geometry/DetectorAPModel/src/: DetectorAPConstruction.cxx  DetectorAPConstruction.h  LinkDef.h
geometry/DetectorGenericModel/: CMakeLists.txt
geometry/DetectorGenericModel/src/: DetectorGenericConstruction.cxx  DetectorGenericConstruction.h
scripts/: reco_cells.py  reco_trf.py
